--- a/index.html
+++ b/index.html
@@ -318,6 +318,25 @@
                           <li>Documentação técnica e versionamento de código.</li>
                           <li>Exploração contínua de novas tecnologias e melhoria de processos.</li>
                         </ul>
+						<div class="mt-4 flex gap-3">
+                          <button
+                            type="button"
+                            data-story
+                            data-modal="image-only"
+                            data-title="Imagem da experiência"
+                            data-img="https://media.licdn.com/dms/image/v2/D4D2DAQHxR5iT7YIW3A/profile-treasury-image-shrink_800_800/B4DZm_Ux.eJYAc-/0/1759851524123?e=1771830000&v=beta&t=YTTbujfyEDEH8f6EJ23PUeSJxv7FHl8sjUmO8JkT-L4"
+                            class="soft-glow rounded-xl border border-slate-800 bg-deep/60 overflow-hidden"
+                            aria-label="Ampliar imagem da experiência"
+                          >
+                            <img
+                              src="https://media.licdn.com/dms/image/v2/D4D2DAQHxR5iT7YIW3A/profile-treasury-image-shrink_800_800/B4DZm_Ux.eJYAc-/0/1759851524123?e=1771830000&v=beta&t=YTTbujfyEDEH8f6EJ23PUeSJxv7FHl8sjUmO8JkT-L4"
+                              alt="Imagem da experiência"
+                              class="w-32 h-20 object-cover"
+                              loading="lazy"
+                              decoding="async"
+                            />
+						</button>
+                        </div>
 		                </div>
 		              </div>
 			            </article>
@@ -367,6 +386,25 @@
                           <li>Configuração de ambiente cliente/servidor, assegurando comunicação e compartilhamento em rede.</li>
                           <li>Coleta e análise de logs, além de manutenções em bancos de dados Firebase e MongoDB.</li>
                         </ul>
+						<div class="mt-4 flex gap-3">
+                          <button
+                            type="button"
+                            data-story
+                            data-modal="image-only"
+                            data-title="Imagem da experiência"
+                            data-img="https://media.licdn.com/dms/image/v2/D4D2DAQEOqkyvxkIBow/profile-treasury-image-shrink_800_800/profile-treasury-image-shrink_800_800/0/1733177223945?e=1771826400&v=beta&t=8PBQgoap6Y9MQ4b40KpmsQRYCY3ptMNX6-5xTsX48y4"
+                            class="soft-glow rounded-xl border border-slate-800 bg-deep/60 overflow-hidden"
+                            aria-label="Ampliar imagem da experiência"
+                          >
+                            <img
+                              src="https://media.licdn.com/dms/image/v2/D4D2DAQEOqkyvxkIBow/profile-treasury-image-shrink_800_800/profile-treasury-image-shrink_800_800/0/1733177223945?e=1771826400&v=beta&t=8PBQgoap6Y9MQ4b40KpmsQRYCY3ptMNX6-5xTsX48y4"
+                              alt="Imagem da experiência"
+                              class="w-32 h-20 object-cover"
+                              loading="lazy"
+                              decoding="async"
+                            />
+						</button>
+                        </div>
 		                </div>
 		              </div>
 		            </article>
@@ -390,7 +428,7 @@
 			                        <a href="https://www.linkedin.com/company/ks2solucoes" target="_blank" rel="noopener noreferrer" class="text-blue-300 hover:text-blue-200 underline decoration-electric/60 underline-offset-4">KS2</a>
 			                        • Tempo integral
 			                      </p>
-		                      <p class="text-xs text-slate-500">2021 — 2022</p>
+		                      <p class="text-xs text-slate-500">set de 2022 — set de 2023</p>
 		                    </div>
 		                  </div>
                         <p class="text-slate-300 mt-2">
@@ -406,6 +444,25 @@
                           <li>Administração de contas no Microsoft 365 e execução de backups PST.</li>
                           <li>Orientação e treinamento técnico a usuários sobre sistemas e boas práticas.</li>
                         </ul>
+                        <div class="mt-4 flex gap-3">
+                          <button
+                            type="button"
+                            data-story
+                            data-modal="image-only"
+                            data-title="Imagem da experiência"
+                            data-img="https://media.licdn.com/dms/image/v2/D4D2DAQFtPCWBflP2jw/profile-treasury-image-shrink_1920_1920/profile-treasury-image-shrink_1920_1920/0/1693571734891?e=1771826400&v=beta&t=a_5Bjwq0QIwEzN-cM-xznVI6Gf5WgofdB-OZh5IG_sY"
+                            class="soft-glow rounded-xl border border-slate-800 bg-deep/60 overflow-hidden"
+                            aria-label="Ampliar imagem da experiência"
+                          >
+                            <img
+                              src="https://media.licdn.com/dms/image/v2/D4D2DAQFtPCWBflP2jw/profile-treasury-image-shrink_1920_1920/profile-treasury-image-shrink_1920_1920/0/1693571734891?e=1771826400&v=beta&t=a_5Bjwq0QIwEzN-cM-xznVI6Gf5WgofdB-OZh5IG_sY"
+                              alt="Imagem da experiência"
+                              class="w-32 h-20 object-cover"
+                              loading="lazy"
+                              decoding="async"
+                            />
+                          </button>
+                        </div>
 		                </div>
 		              </div>
 		            </article>
@@ -420,22 +477,21 @@
             <div class="h-px flex-1 bg-gradient-to-r from-electric/70 to-transparent"></div>
           </div>
 
-          <div class="grid md:grid-cols-3 gap-6">
-            <article class="soft-glow rounded-xl border border-slate-700 bg-graphite/45 p-6">
-              <span class="inline-flex items-center rounded-full border border-electric/60 px-3 py-1 text-xs uppercase tracking-[0.18em] text-blue-300 mb-4">Badge</span>
-              <h4 class="text-white font-semibold">CCNA Enterprise Networking</h4>
-            </article>
-            <article class="soft-glow rounded-xl border border-slate-700 bg-graphite/45 p-6">
-              <span class="inline-flex items-center rounded-full border border-electric/60 px-3 py-1 text-xs uppercase tracking-[0.18em] text-blue-300 mb-4">Badge</span>
-              <h4 class="text-white font-semibold">CCNA Switching, Routing and Wireless Essentials</h4>
-            </article>
-            <article class="soft-glow rounded-xl border border-slate-700 bg-graphite/45 p-6">
-              <span class="inline-flex items-center rounded-full border border-electric/60 px-3 py-1 text-xs uppercase tracking-[0.18em] text-blue-300 mb-4">Badge</span>
-              <h4 class="text-white font-semibold">Santander Tech+ BackEnd</h4>
-            </article>
-          </div>
-        </div>
-      </section>
+	          <div class="flex items-center justify-between gap-4 mb-6">
+	            <p class="text-sm text-slate-400">Deslize para ver todos os certificados</p>
+	            <div class="flex items-center gap-2">
+	              <button type="button" data-certs-prev class="soft-glow inline-flex items-center justify-center w-9 h-9 rounded-lg border border-slate-700 bg-graphite/40 text-slate-200 hover:text-white" aria-label="Certificados anteriores">
+	                <span class="material-icons text-[20px]">chevron_left</span>
+	              </button>
+	              <button type="button" data-certs-next class="soft-glow inline-flex items-center justify-center w-9 h-9 rounded-lg border border-slate-700 bg-graphite/40 text-slate-200 hover:text-white" aria-label="Próximos certificados">
+	                <span class="material-icons text-[20px]">chevron_right</span>
+	              </button>
+	            </div>
+	          </div>
+
+	          <div data-certs-rail class="no-scrollbar flex gap-4 overflow-x-auto py-2 snap-x snap-mandatory scroll-smooth w-full max-w-full pr-6"></div>
+	        </div>
+	      </section>
 
       <section id="documentacoes" data-reveal class="py-24 border-y border-slate-800/70 bg-deep/45">
         <div class="max-w-7xl mx-auto px-6">
@@ -828,11 +884,11 @@
 	        revealTargets.forEach((el) => observer.observe(el));
 	      })();
 
-	      (() => {
-	        const toggleBtn = document.querySelector('[data-exp-toggle]');
-	        const extras = Array.from(document.querySelectorAll('[data-exp-extra]'));
-	        const label = document.querySelector('[data-exp-toggle-label]');
-	        if (!toggleBtn || !extras.length) return;
+		      (() => {
+		        const toggleBtn = document.querySelector('[data-exp-toggle]');
+		        const extras = Array.from(document.querySelectorAll('[data-exp-extra]'));
+		        const label = document.querySelector('[data-exp-toggle-label]');
+		        if (!toggleBtn || !extras.length) return;
 
 	        const setExpanded = (expanded) => {
 	          toggleBtn.setAttribute('aria-expanded', String(expanded));
@@ -855,11 +911,124 @@
 	        };
 
 	        setExpanded(false);
-	        toggleBtn.addEventListener('click', () => {
-	          const expanded = toggleBtn.getAttribute('aria-expanded') === 'true';
-	          setExpanded(!expanded);
-	        });
-	      })();
-	    </script>
-  </body>
-</html>
+		        toggleBtn.addEventListener('click', () => {
+		          const expanded = toggleBtn.getAttribute('aria-expanded') === 'true';
+		          setExpanded(!expanded);
+		        });
+		      })();
+
+		      (() => {
+		        const rail = document.querySelector('[data-certs-rail]');
+		        if (!rail) return;
+
+		        const prevBtn = document.querySelector('[data-certs-prev]');
+		        const nextBtn = document.querySelector('[data-certs-next]');
+
+		        const certs = [
+		          {
+		            id: 1,
+		            title: 'AWS Knowledge: Cloud Essentials',
+		            issuer: 'Amazon Web Services Training and Certification',
+		            issued: '2024-10-15',
+		            kind: 'Training Badge',
+		          },
+		          { id: 2, title: 'CCNA: Introduction to Networks', issuer: 'Cisco', issued: '2023-12-18', kind: 'Certificado' },
+		          { id: 3, title: 'CCNA: Switching, Routing, and Wireless Essentials', issuer: 'Cisco', issued: '2023-12-18', kind: 'Certificado' },
+		          { id: 4, title: 'CCNA: Enterprise Networking, Security, and Automation', issuer: 'Cisco', issued: '2023-12-22', kind: 'Certificado' },
+		          { id: 5, title: 'Introduction to Data Science', issuer: 'Cisco', issued: '2024-08-13', kind: 'Certificado' },
+		          { id: 6, title: 'Computer Network', issuer: 'Huawei', issued: '2024-10-14', kind: 'Certificado' },
+		          { id: 7, title: 'IT Essentials', issuer: 'Cisco', issued: '2024-12-04', kind: 'Certificado' },
+		        ];
+
+		        const formatIssued = (isoDate) => {
+		          const date = new Date(`${isoDate}T00:00:00`);
+		          if (Number.isNaN(date.getTime())) return isoDate;
+		          return date.toLocaleDateString('pt-BR', { day: '2-digit', month: 'short', year: 'numeric' });
+		        };
+
+		        rail.innerHTML = certs
+		          .map(
+		            (c) => `
+		              <article class="snap-center shrink-0 w-[78vw] sm:w-[360px] lg:w-[300px] soft-glow rounded-xl border border-slate-700 bg-graphite/45 p-6">
+		                <span class="inline-flex items-center rounded-full border border-electric/60 px-3 py-1 text-xs uppercase tracking-[0.18em] text-blue-300 mb-4">${c.kind}</span>
+		                <h4 class="text-white font-semibold leading-snug">${c.title}</h4>
+		                <p class="mt-2 text-sm text-slate-300">${c.issuer}</p>
+		                <p class="mt-1 text-xs text-slate-500">Emitido em ${formatIssued(c.issued)}</p>
+		              </article>
+		            `
+		          )
+		          .join('');
+
+		        const cards = Array.from(rail.children);
+		        if (!cards.length) return;
+
+		        let activeIndex = 0;
+		        let rafPending = false;
+
+		        const updateActiveFromScroll = () => {
+		          const railRect = rail.getBoundingClientRect();
+		          const railCenterX = railRect.left + railRect.width / 2;
+		          let bestIndex = 0;
+		          let bestDistance = Infinity;
+
+		          cards.forEach((card, index) => {
+		            const rect = card.getBoundingClientRect();
+		            const centerX = rect.left + rect.width / 2;
+		            const distance = Math.abs(centerX - railCenterX);
+		            if (distance < bestDistance) {
+		              bestDistance = distance;
+		              bestIndex = index;
+		            }
+		          });
+
+		          activeIndex = bestIndex;
+		        };
+
+		        const scrollToIndex = (nextIndex, behavior = 'smooth') => {
+		          const normalized = (nextIndex + cards.length) % cards.length;
+		          const card = cards[normalized];
+		          const targetLeft = card.offsetLeft - (rail.clientWidth - card.clientWidth) / 2;
+		          rail.scrollTo({ left: targetLeft, behavior });
+		          activeIndex = normalized;
+		        };
+
+		        prevBtn?.addEventListener('click', () => scrollToIndex(activeIndex - 1));
+		        nextBtn?.addEventListener('click', () => scrollToIndex(activeIndex + 1));
+
+		        scrollToIndex(0, 'auto');
+		        requestAnimationFrame(updateActiveFromScroll);
+
+		        rail.addEventListener('scroll', () => {
+		          if (rafPending) return;
+		          rafPending = true;
+		          requestAnimationFrame(() => {
+		            rafPending = false;
+		            updateActiveFromScroll();
+		          });
+		        });
+
+		        const prefersReducedMotion = window.matchMedia?.('(prefers-reduced-motion: reduce)')?.matches;
+		        if (!prefersReducedMotion) {
+		          let autoTimer = null;
+		          const start = () => {
+		            if (autoTimer) return;
+		            autoTimer = window.setInterval(() => scrollToIndex(activeIndex + 1), 3600);
+		          };
+		          const stop = () => {
+		            if (!autoTimer) return;
+		            window.clearInterval(autoTimer);
+		            autoTimer = null;
+		          };
+
+		          start();
+		          rail.addEventListener('pointerenter', stop);
+		          rail.addEventListener('pointerleave', start);
+		          rail.addEventListener('focusin', stop);
+		          rail.addEventListener('focusout', start);
+		          prevBtn?.addEventListener('pointerdown', stop);
+		          nextBtn?.addEventListener('pointerdown', stop);
+		        }
+		      })();
+		    </script>
+	  </body>
+	</html>
