--- a/index.html
+++ b/index.html
@@ -167,6 +167,7 @@
           <a class="neon-link hover:text-blue-300" href="#sobre">Sobre</a>
           <a class="neon-link hover:text-blue-300" href="#experiencia">Experiência</a>
           <a class="neon-link hover:text-blue-300" href="#certificados">Certificados</a>
+          <a class="neon-link hover:text-blue-300" href="#educacao">Educação</a>
           <a class="neon-link hover:text-blue-300" href="#documentacoes">Projetos</a>
           <a class="neon-link hover:text-blue-300" href="#contatos">Contato</a>
         </nav>
@@ -184,8 +185,8 @@
   Meu pai sempre disse que o computador seria o meu futuro, e essa é minha missão.<br>
   Entender de tecnologia é, para mim, é honrar essas palavras.<br>
   Tenho direcionado minha evolução para Python e desenvolvimento de automações e sistemas.<br>
-  Para mim, tecnologia não é apenas profissão — é propósito.</p>
-              <p class="text-slate-400 italic mb-9">Infraestrutura sólida não aparece. Ela simplesmente funciona.</p>
+  Para mim, tecnologia não é profissão... é propósito.</p>
+              <p class="text-slate-400 italic mb-9">Now is better than never - Zen of Python .</p>
               <div class="flex flex-wrap gap-4">
                 <a href="#experiencia" class="soft-glow rounded-lg border border-electric/60 bg-electric/85 hover:bg-electric text-white px-7 py-3 font-semibold">Ver Experiência</a>
                 <a href="#contatos" class="soft-glow rounded-lg border border-slate-600 bg-graphite/55 hover:border-electric/60 text-slate-100 px-7 py-3 font-semibold">Falar Comigo</a>
@@ -476,7 +477,6 @@
             <h3 class="text-3xl md:text-4xl text-white font-bold">Certificados</h3>
             <div class="h-px flex-1 bg-gradient-to-r from-electric/70 to-transparent"></div>
           </div>
-
 	          <div class="flex items-center justify-between gap-4 mb-6">
 	            <p class="text-sm text-slate-400">Deslize para ver todos os certificados</p>
 	            <div class="flex items-center gap-2">
@@ -488,11 +488,10 @@
 	              </button>
 	            </div>
 	          </div>
-
 	          <div data-certs-rail class="no-scrollbar flex gap-4 overflow-x-auto py-2 snap-x snap-mandatory scroll-smooth w-full max-w-full pr-6"></div>
 	        </div>
 	      </section>
-
+		  <!--
       <section id="documentacoes" data-reveal class="py-24 border-y border-slate-800/70 bg-deep/45">
         <div class="max-w-7xl mx-auto px-6">
           <div class="flex items-center gap-4 mb-4">
@@ -518,6 +517,160 @@
               <h4 class="text-white font-semibold mb-2">Estudos de Arquitetura & Attano Tech</h4>
               <p class="text-slate-400">Documentações e protótipos técnicos orientados à estabilidade e organização da infraestrutura.</p>
             </article>
+          </div>
+        </div>
+      </section>
+-->
+      <section id="educacao" data-reveal data-reveal-stagger="reverse" class="py-24 border-y border-slate-800/70 bg-deep/45">
+        <div class="max-w-7xl mx-auto px-6">
+          <div class="flex items-center gap-4 mb-4">
+            <h3 class="text-3xl md:text-4xl text-white font-bold">Educação</h3>
+            <div class="h-px flex-1 bg-gradient-to-r from-electric/70 to-transparent"></div>
+          </div>
+          <p class="text-slate-400 mb-12 max-w-3xl">Educação formal e cursos complementares com foco em redes, cloud e fundamentos de infraestrutura.</p>
+
+          <div class="grid lg:grid-cols-2 gap-8">
+            <div>
+              <div class="flex items-center justify-between gap-4 mb-6">
+                <h4 class="text-white font-semibold text-lg">Educação formal</h4>
+                <span class="text-xs text-slate-500">timeline</span>
+              </div>
+
+              <div class="relative timeline rocket-timeline pl-10 space-y-6">
+                <article data-reveal-item class="soft-glow rounded-xl border border-slate-700 bg-graphite/40 p-6">
+                  <div class="flex gap-4">
+                    <div class="shrink-0 w-12 h-12 rounded-lg overflow-hidden border border-slate-800 bg-deep/60 grid place-items-center">
+                      <span class="material-icons text-blue-300">school</span>
+                    </div>
+                    <div class="min-w-0 flex-1">
+                      <h5 class="text-white font-semibold leading-snug">Faculdade de Tecnologia de Bauru</h5>
+                      <p class="text-xs text-slate-500">Tecnólogo em Redes de Computadores • 2024 - o momento</p>
+                      <p class="text-slate-300 mt-2">Formação ampla em infraestrutura e tecnologia, com fundamentos de redes, sistemas operacionais e organização de computadores.<br>
+Inclui projetos práticos com servidores, Active Directory, programação e automação, além de noções de Administração e Inglês técnico para preparação profissional.</p>
+                      <div class="mt-4 flex flex-wrap gap-3">
+                      </div>
+                    </div>
+                  </div>
+              </div>
+            </div>
+
+            <div>
+              <div class="flex items-center justify-between gap-4 mb-6">
+                <h4 class="text-white font-semibold text-lg">Cursos complementares</h4>
+                <span class="text-xs text-slate-500">destaques</span>
+              </div>
+
+              <div class="relative timeline rocket-timeline pl-10 space-y-6">
+                <article data-reveal-item class="soft-glow rounded-xl border border-slate-700 bg-graphite/40 p-6">
+                  <div class="flex gap-4">
+                    <div class="shrink-0 w-12 h-12 rounded-lg overflow-hidden border border-slate-800 bg-deep/60 grid place-items-center">
+                      <span class="material-icons text-blue-300">router</span>
+                    </div>
+                    <div class="min-w-0 flex-1">
+                      <div class="min-w-0">
+                        <h5 class="text-white font-semibold leading-snug">Trilha CCNA (Cisco)</h5>
+                        <p class="text-xs text-slate-500">Dez de 2023</p>
+                      </div>
+
+                      <div class="mt-5 relative">
+                        <div class="absolute left-[-2.5rem] top-0 bottom-0 w-px bg-slate-700/70"></div>
+                        <div class="space-y-5">
+                          <div class="relative">
+                            <span class="absolute left-[-2.875rem] top-2 w-3 h-3 rounded-full border-2 border-electric bg-deep shadow-[0_0_0_4px_rgba(37,99,235,.14)]"></span>
+                            <h6 class="text-white font-semibold leading-snug">Introduction to Networks</h6>
+                            <p class="text-xs text-slate-500">Cisco • 18/12/2023</p>
+                            <div class="mt-3">
+                            </div>
+                          </div>
+
+                          <div class="relative">
+                            <span class="absolute left-[-2.875rem] top-2 w-3 h-3 rounded-full border-2 border-electric bg-deep shadow-[0_0_0_4px_rgba(37,99,235,.14)]"></span>
+                            <h6 class="text-white font-semibold leading-snug">Switching, Routing, and Wireless Essentials</h6>
+                            <p class="text-xs text-slate-500">Cisco • 18/12/2023</p>
+                            <div class="mt-3">
+                            </div>
+                          </div>
+                          <div class="relative">
+                            <span class="absolute left-[-2.875rem] top-2 w-3 h-3 rounded-full border-2 border-electric bg-deep shadow-[0_0_0_4px_rgba(37,99,235,.14)]"></span>
+                            <h6 class="text-white font-semibold leading-snug">Enterprise Networking, Security, and Automation</h6>
+                            <p class="text-xs text-slate-500">Cisco • 22/12/2023</p>
+                            <div class="mt-3">
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </article>
+
+                <article data-reveal-item class="soft-glow rounded-xl border border-slate-700 bg-graphite/40 p-6">
+                  <div class="flex gap-4">
+                    <div class="shrink-0 w-12 h-12 rounded-lg overflow-hidden border border-slate-800 bg-deep/60 grid place-items-center">
+                      <span class="material-icons text-blue-300">cloud</span>
+                    </div>
+                    <div class="min-w-0 flex-1">
+                      <h5 class="text-white font-semibold leading-snug">AWS Knowledge: Cloud Essentials</h5>
+                      <p class="text-xs text-slate-500">Amazon Web Services • 15/10/2024</p>
+                      <p class="text-slate-300 mt-2">Conquistei esta badge após desenvolver conhecimentos fundamentais sobre os principais conceitos de Cloud Computing na AWS. <br> Durante o treinamento, aprofundei minha compreensão dos serviços essenciais de Computação (Compute), Armazenamento (Storage), Redes (Networking) e Bancos de Dados (Database).<br>
+
+Também adquiri entendimento sobre segurança na nuvem, princípios de arquitetura AWS, modelos de precificação e planos de suporte, fortalecendo minha base técnica para atuar em ambientes cloud.</p>
+                      <div class="mt-4">
+                      </div>
+                    </div>
+                  </div>
+                </article>
+<!--
+                <article data-reveal-item class="soft-glow rounded-xl border border-slate-700 bg-graphite/40 p-6">
+                  <div class="flex gap-4">
+                    <div class="shrink-0 w-12 h-12 rounded-lg overflow-hidden border border-slate-800 bg-deep/60 grid place-items-center">
+                      <span class="material-icons text-blue-300">security</span>
+                    </div>
+                    <div class="min-w-0 flex-1">
+                      <h5 class="text-white font-semibold leading-snug">Enterprise & Fundamentos</h5>
+                      <p class="text-xs text-slate-500">2024</p>
+                      <ul class="mt-3 text-slate-400 text-sm space-y-1 list-disc list-inside">
+                        <li>
+                          <button
+                            type="button"
+                            data-modal="content"
+                            data-title="Computer Network"
+                            data-body="Fundamentos de rede com visão prática para operação e troubleshooting em ambientes corporativos."
+                            data-img="img/storys8.png"
+                            class="text-left text-blue-300 hover:text-blue-200 underline decoration-electric/60 underline-offset-4"
+                          >
+                            Computer Network (Huawei) • 14/10/2024
+                          </button>
+                        </li>
+                        <li>
+                          <button
+                            type="button"
+                            data-modal="content"
+                            data-title="IT Essentials"
+                            data-body="Conceitos essenciais de hardware, sistemas e redes, com base para suporte, manutenção e boas práticas."
+                            data-img="img/storys9.png"
+                            class="text-left text-blue-300 hover:text-blue-200 underline decoration-electric/60 underline-offset-4"
+                          >
+                            IT Essentials (Cisco) • 04/12/2024
+                          </button>
+                        </li>
+                        <li>
+                          <button
+                            type="button"
+                            data-modal="content"
+                            data-title="Introduction to Data Science"
+                            data-body="Introdução a data science com noções de dados, análise e aplicações para tomada de decisão e monitoramento."
+                            data-img="img/storys10.png"
+                            class="text-left text-blue-300 hover:text-blue-200 underline decoration-electric/60 underline-offset-4"
+                          >
+                            Introduction to Data Science (Cisco) • 13/08/2024
+                          </button>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                </article>-->
+              </div>
+            </div>
           </div>
         </div>
       </section>
